--- a/README
+++ b/README
@@ -1,4 +1,7 @@
+<h1>Simple Backbone Todo App</h1>
 This is a dead simple TODO app written in Backbone.js for writing a toturial for getting started with Backbone.
 Try it here: http://mohsen1.github.com/Simple-Backbone-TODO/
 
-!(screenshot)[http://i.imgur.com/B8g5O.png]
+
+![Alt text](http://i.imgur.com/B8g5O.png)
+
